--- a/dynamic-website.html
+++ b/dynamic-website.html
@@ -40,9 +40,9 @@
             <div class="auto-container">
             	<div class="inner-container">
                     <ul class="bread-crumb">
-                        <li><a href="index.html">Home</a></li>
+                        <!-- <li><a href="index.html">Home</a></li>
                         <li><a href="full-stack_development.html">Full Stack Development</a></li>
-                        <li>Dynamic Website Development</li>
+                        <li>Dynamic Website Development</li> -->
                     </ul>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                         </div>
 
                         <!-- Sidebar brochure-->
-                        <div class="sidebar-widget sidebar-brochure">
+                        <!-- <div class="sidebar-widget sidebar-brochure">
                             <div class="sidebar-title">
                                 <h2>Our Brochures</h2>
                             </div>
@@ -85,7 +85,7 @@
                                 <span>Download.pdf</span></a>
                             <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
                                 Company <span>Download.doc</span></a>
-                        </div>
+                        </div> -->
 
                         <!-- Sidebar brochure-->
                         <div class="sidebar-widget testimonial-widget">
@@ -163,7 +163,8 @@
                             </div>
                             <div class="lower-content">
                             	<div class="text justify">
-                                	<p>Dynamic website design contains pages that change progressively according to the client's needs. It gives change data each time the page burdens and this sort of site, the page may change concerning the client, time, area, and so on powerful destinations use worker innovations, like PHP or JavaScript, for web advancement. These PC codes naturally make HTML and CSS "on the fly. Responsive website architecture or RWD is a way to deal with website architecture that makes site pages give well on different gadgets and windows or screen sizes. A Responsive plan is a  point at which a solitary site and assistance to all program types and the CSS code handle the presentation for various gadgets. </p>
+                                	<p>Dynamic website design includes web pages that automatically adjust and update based on the user’s interaction, location, time, and device. This type of website delivers personalized content to users and dynamically changes elements using server-side technologies like <strong>PHP</strong>, <strong>JavaScript</strong>, and <strong>Node.js</strong>. These programming languages generate <strong>HTML</strong> and <strong>CSS</strong> content in real-time, ensuring that the website remains <strong>interactive</strong> and <strong>user-friendly</strong>. A <strong>responsive web design (RWD)</strong> approach ensures that the site looks great and functions smoothly on all devices, from smartphones to desktops. By using <strong>media queries</strong> in CSS, it optimizes the layout for various screen sizes, enhancing <strong>user experience (UX)</strong>. With RWD, one site serves all browsers and adapts to different screen resolutions, making it a top choice for modern <strong>SEO optimization</strong>.</p>
+
                                     <!-- <a href="#" class="theme-btn btn-style-one start-btn">Start Yours</a>
                                     <h3>SEO Services</h3>
                                     <p>Desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure example, which of us ever undertakes.</p>
