--- a/market_research.html
+++ b/market_research.html
@@ -40,11 +40,7 @@
             <div class="page-info">
                 <div class="auto-container">
                     <div class="inner-container">
-                        <ul class="bread-crumb">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="digital_marketing.html">Digital Marketing</a></li>
-                            <li>Market Research</li>
-                        </ul>
+                        
                     </div>
                 </div>
             </div>
@@ -78,16 +74,7 @@
                             </div>
 
                             <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div>
-
+                            
                             <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
                                 <div class="sidebar-title">
@@ -158,6 +145,7 @@
                                 </div>
                                 <div class="lower-content">
                                     <div class="text" style="text-align: justify;">
+                                        <p>Market research is the process of gathering and analyzing data about consumers, competitors, and market trends to make informed business decisions. It helps businesses identify <strong>customer needs</strong>, understand market demand, and stay ahead of competitors by leveraging <strong>data-driven insights</strong>. By conducting thorough <strong>competitor analysis</strong> and using <strong>consumer behavior studies</strong>, companies can develop effective marketing strategies and improve their product offerings. Utilizing tools like <strong>surveys, focus groups,</strong> and <strong>social media analytics</strong> provides valuable information that helps in identifying <strong>market opportunities</strong> and optimizing campaigns. Incorporating <strong>AI-powered data analysis</strong> and <strong>predictive analytics</strong> enables businesses to forecast future trends and adjust strategies accordingly, ensuring long-term success in a competitive marketplace.</p>
 
                                     </div>
                                     <!--Two Column-->
