--- a/react-development.html
+++ b/react-development.html
@@ -41,9 +41,9 @@
                 <div class="auto-container">
                     <div class="inner-container">
                         <ul class="bread-crumb">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="full-stack_development.html">Full Stack Development</a></li>
-                            <li>ReactJS Design and Development</li>
+                            <!-- <li><a href="index.html">Home</a></li>
+                            <li><a href="full-stack_development.html">Full Stack Development</a></li> -->
+                            <!-- <li>ReactJS Design and Development</li> -->
                         </ul>
                     </div>
                 </div>
@@ -78,15 +78,7 @@
                             </div>
 
                             <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div>
+                        
 
                             <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
@@ -164,7 +156,8 @@
                                 </div>
                                 <div class="lower-content">
                                     <div class="text justify">
-                                        <p> </p>
+                                        <p>React.js is a powerful and flexible JavaScript library used for building <strong>dynamic, responsive web applications</strong> with a focus on performance and user experience. It enables developers to create reusable UI components that automatically update and render efficiently when the data changes, making React ideal for building <strong>single-page applications (SPAs)</strong>. With React, developers can leverage features like <strong>virtual DOM</strong> to optimize rendering speed and enhance <strong>performance</strong> across different devices. Additionally, React’s component-based architecture, combined with tools like <strong>React Router</strong>, helps build <strong>mobile-first, SEO-friendly web applications</strong> that adapt seamlessly to various screen sizes. By using <strong>JSX</strong>, <strong>React Hooks</strong>, and <strong>state management</strong> solutions like <strong>Redux</strong>, developers can create highly interactive user interfaces that improve both <strong>engagement</strong> and <strong>SEO rankings</strong>.</p>
+
                                         <!-- <a href="#" class="theme-btn btn-style-one start-btn">Start Yours</a>
                                     <h3>SEO Services</h3>
                                     <p>Desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure example, which of us ever undertakes.</p>
