--- a/uiux-development.html
+++ b/uiux-development.html
@@ -41,9 +41,9 @@
                 <div class="auto-container">
                     <div class="inner-container">
                         <ul class="bread-crumb">
-                            <li><a href="index.html">Home</a></li>
+                            <!-- <li><a href="index.html">Home</a></li>
                             <li><a href="full-stack_development.html">Full Stack Development</a></li>
-                            <li>UI/UX Design and Development</li>
+                            <li>UI/UX Design and Development</li> -->
                         </ul>
                     </div>
                 </div>
@@ -78,15 +78,8 @@
                             </div>
 
                             <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div>
+                            
+                            
 
                             <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
@@ -164,7 +157,8 @@
                                 </div>
                                 <div class="lower-content">
                                     <div class="text justify">
-                                        <p></p>
+                                        <p><strong>UI/UX design</strong> plays a crucial role in creating <strong>dynamic</strong> and <strong>responsive websites</strong> that offer a seamless user experience across devices. In modern web development, a well-crafted <strong>User Interface (UI)</strong> ensures that every visual element is designed to be intuitive and engaging, while <strong>User Experience (UX)</strong> focuses on the overall interaction, ensuring smooth navigation and user satisfaction. Implementing a <strong>mobile-first design approach</strong>, UI/UX designers use tools like <strong>wireframing</strong> and <strong>prototyping</strong> to optimize the site for different screen sizes and resolutions. By prioritizing <strong>responsive design</strong> and <strong>accessibility</strong>, they ensure that users on mobile devices, tablets, and desktops all have a consistent experience. Additionally, by using advanced techniques like <strong>micro-interactions</strong>, <strong>minimalist design</strong>, and <strong>user-centered design</strong> principles, UI/UX design helps improve <strong>SEO rankings</strong> by enhancing <strong>user engagement</strong> and reducing bounce rates.</p>
+
                                         <!-- <a href="#" class="theme-btn btn-style-one start-btn">Start Yours</a>
                                     <h3>SEO Services</h3>
                                     <p>Desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure example, which of us ever undertakes.</p>
