--- a/static-website.html
+++ b/static-website.html
@@ -41,9 +41,9 @@
                 <div class="auto-container">
                     <div class="inner-container">
                         <ul class="bread-crumb">
-                            <li><a href="index.html">Home</a></li>
+                            <!-- <li><a href="index.html">Home</a></li>
                             <li><a href="full-stack_development.html">Full Stack Development</a></li>
-                            <li>static Website Development</li>
+                            <li>static Website Development</li> -->
                         </ul>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                             </div>
 
                             <!-- Sidebar brochure-->
-                            <div class="sidebar-widget sidebar-brochure">
+                            <!-- <div class="sidebar-widget sidebar-brochure">
                                 <div class="sidebar-title">
                                     <h2>Our Brochures</h2>
                                 </div>
@@ -86,7 +86,7 @@
                                     <span>Download.pdf</span></a>
                                 <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
                                     Company <span>Download.doc</span></a>
-                            </div>
+                            </div> -->
 
                             <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
@@ -164,22 +164,19 @@
                                 </div>
                                 <div class="lower-content">
                                     <div class="text justify">
-                                        <p>Static website design administration it's viewed as the most straightforward
-                                            and simple help gave by a web composition and improvement organization. The
-                                            facilitating of static sites is basic and it a best appropriate for little
-                                            measured organizations. Static Website Designing includes little and
-                                            furthermore immense sites yet, with basic plans and without complex
-                                            programming and is cost lesser than any unique site plan. These are static
-                                            sites that permit organizations to clarify their organization's objectives
-                                            and targets. We help you in arranging, plan, and improvement of your own or
-                                            organization sites. It's quicker to download pictures and leaflets. The
-                                            fundamental reason for our static site planning administrations to give you
-                                            with an online presence. </p>
+                                        <p><strong>Static Website Design and Development Services</strong> are ideal for small businesses looking for a <strong>cost-effective</strong> and <strong>simple solution</strong> to establish an <strong>online presence</strong>. As a leading <strong>web design and development company</strong>, we specialize in creating <strong>fast-loading, SEO-friendly static websites</strong> that are perfect for businesses seeking a quick, efficient, and reliable web solution.</p>
+
+<p>Our <strong>static website design</strong> includes both <strong>small-scale</strong> and <strong>large-scale websites</strong>, featuring clean and modern designs, optimized for speed, mobile responsiveness, and <strong>user experience (UX)</strong>. With no complex programming required, static websites are an affordable way to showcase your business's <strong>objectives</strong>, <strong>services</strong>, and <strong>brand identity</strong>.</p>
+
+<p>We assist with the complete <strong>planning, design, and development</strong> of your <strong>personal</strong> or <strong>business website</strong>, ensuring it aligns with <strong>SEO best practices</strong> and enhances <strong>organic search visibility</strong>. Our sites are designed to load <strong>faster</strong>, ensuring a seamless experience for your visitors.</p>
+
+<p>By choosing our <strong>static website design services</strong>, you're guaranteed a <strong>responsive website</strong> that's easy to manage, <strong>SEO optimized</strong>, and designed to help you reach your <strong>target audience</strong> effectively, giving your business a competitive edge in the digital world.</p>
+
                                         <!-- <a href="#" class="theme-btn btn-style-one start-btn">Start Yours</a>
                                     <h3>SEO Services</h3>
                                     <p>Desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure example, which of us ever undertakes.</p>
                             --</div>
-                                <!--Two Column-->
+                                Two Column-->
 
 
                                         <!--Accordian Boxed-->
