--- a/job_opportunity.html
+++ b/job_opportunity.html
@@ -241,10 +241,10 @@
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
-                                    <h3><a href="#">Course 1</a></h3>
+                                    <h3><a href="#">HR Executive</a></h3>
                                 </div>
                                 <div class="more">
-                                    <a href="/digital-marketing.html" class="read-more"><span
+                                    <a href="/hr_executive_jobopening.html" class="read-more"><span
                                             class="fa fa-chevron-circle-right"></span> Read
                                         More</a>
                                 </div>
@@ -260,10 +260,10 @@
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
-                                    <h3><a href="#">Course 2</a></h3>
+                                    <h3><a href="#">Data Analytics</a></h3>
                                 </div>
                                 <div class="more">
-                                    <a href="/digital-marketing.html" class="read-more"><span
+                                    <a href="/data_analytics_jobopportunities.html" class="read-more"><span
                                             class="fa fa-chevron-circle-right"></span> Read
                                         More</a>
                                 </div>
@@ -280,10 +280,10 @@
                             </div>
                             <div class="lower-content">
                                 <div class="upper">
-                                    <h3><a href="#">Course 3</a></h3>
+                                    <h3><a href="#">Data Science</a></h3>
                                 </div>
                                 <div class="more">
-                                    <a href="/digital-marketing.html" class="read-more"><span
+                                    <a href="/data_science_jobopportunities.html" class="read-more"><span
                                             class="fa fa-chevron-circle-right"></span> Read
                                         More</a>
                                 </div>
