--- a/static-website.html
+++ b/static-website.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Static Web Development</title>
+    <title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+
+    <meta name="keywords" content="static web development, static websites, fast loading websites, secure websites, lightweight web design, SEO-friendly websites, business portfolio websites, landing page development, static web solutions, cost-effective web development, Technoartz, simple web design, static HTML websites, quick website launch, secure static web pages, static site generators, minimal web design, optimized web performance">
+    <meta name="description" content="Technoartz provides static web development services, building fast, secure, and lightweight websites. Our static websites offer quick load times, enhanced security, and cost-effective solutions for businesses seeking simple yet impactful online presence. Whether for a business portfolio, landing page, or brochure site, we craft static websites that are optimized for performance and SEO. Contact us for reliable static web development tailored to your needs.">
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -77,18 +81,6 @@
                                 </ul>
                             </div>
 
-                            <!-- Sidebar brochure-->
-                            <!-- <div class="sidebar-widget sidebar-brochure">
-                                <div class="sidebar-title">
-                                    <h2>Our Brochures</h2>
-                                </div>
-                                <a class="brochure" href="#"><span class="icon flaticon-pdf"></span>Service Overview
-                                    <span>Download.pdf</span></a>
-                                <a class="brochure" href="#"><span class="icon flaticon-word-file"></span>About Our
-                                    Company <span>Download.doc</span></a>
-                            </div> -->
-
-                            <!-- Sidebar brochure-->
                             <div class="sidebar-widget testimonial-widget">
                                 <div class="sidebar-title">
                                     <h2>Testimonials</h2>
@@ -99,7 +91,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Static Web Development" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -115,7 +107,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Static Web Development" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -131,7 +123,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/resource/author-9.jpg" alt="" />
+                                                        <img src="images/resource/author-9.jpg" alt="Static Web Development" />
                                                     </div>
                                                     <h3>Teena Venanda</h3>
                                                     <div class="location">Newyork City</div>
@@ -160,7 +152,7 @@
                             <div class="inner-box">
                                 <h2>static Website Design and Development</h2>
                                 <div class="image">
-                                    <img src="images/services/7.jpg" alt="" />
+                                    <img src="images/services/7.jpg" alt="Static Web Development" />
                                 </div>
                                 <div class="lower-content">
                                     <div class="text justify">
