--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
                 <div class="team-block col-md-3 col-sm-6 col-xs-12">
                     <div class="inner-box">
                         <div class="image">
-                            <img src="images/resource/Sandip Gadekar.jpg" alt="" />
+                            <img src="images/resource/sandipgadekar.jpg" alt="" />
                         </div>
                         <div class="lower-content-box">
                             <div class="designation">CEO / Founder</div>
@@ -314,7 +314,7 @@
                 <div class="team-block col-md-3 col-sm-6 col-xs-12">
                     <div class="inner-box">
                         <div class="image">
-                            <img src="images/resource/RuturajSawant.jpg" alt="" />
+                            <img src="images/resource/ruturajsawant.jpg" alt="" />
                         </div>
                         <div class="lower-content-box">
                             <div class="designation">President</div>
@@ -337,79 +337,137 @@
     </section>
     <!--End Team Section-->
 
-    <!--Partners Section-->
-    <section class="partners-section">
-        <div class="auto-container">
-            <div class="row clearfix">
+   
+        <!--Partners Section-->
+        <section class="partners-section">
+            <div class="auto-container">
+                <div class="row clearfix">
 
-                <!--Title Column-->
-                <div class="title-column col-md-4 col-sm-12 col-xs-12">
-                    <div class="inner-column">
-                        <h2>Our Partners</h2>
-                        <div class="text">We work closely with our network of Partners to create a smarter, more
-                            connected business community. Our Partners support and enhance their industry expertise and
-                            proven sales and technical knowledge.</div>
-                        <a href="contact.html" class="theme-btn btn-style-one">Join With Us</a>
-                    </div>
-                </div>
-
-                <!--Partners Column-->
-                <div class="testimonial-column col-md-8 col-sm-12 col-xs-12">
-                    <!-- <div class="testimonial-carousel owl-carousel owl-theme"> -->
-
-                    <!--Testimonial Block-->
-                    <div class="testimonial-block">
-                        <div class="inner-box">
-                            <div class="column col-md-6 col-sm-6 col-xs-12">
-                                <div class="partner-block">
-                                    <div class="inner-box">
-                                        <div class="client-img">
-                                            <img src="images/p_logo1.png" alt="I2i specialist" />
-                                        </div>
-                                        <div class="text">Excellent and well-organized marketing team or IT solution
-                                            experts who always believe in continuous learning, discovering new ideas.
-                                        </div>
-                                        <a class="read-more" href="http://i2ispecialist.com/"><span
-                                                class="icon flaticon-right-arrow-1"></span> Visit Website</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--Column-->
-                            <div class="column col-md-6 col-sm-6 col-xs-12">
-                                <div class="partner-block">
-                                    <div class="inner-box">
-                                        <div class="client-img">
-                                            <img src="images/p_logo.png" alt="LeadMize" />
-                                        </div>
-                                        <div class="text">A Digital Marketing Agency that focuses on the most important
-                                            metrics and ROI's.</div>
-                                        <a class="read-more" href="https://www.leadmize.in/"><span
-                                                class="icon flaticon-right-arrow-1"></span> Visit Website</a>
-                                    </div>
-                                </div>
-                            </div>
+                    <!--Title Column-->
+                    <div class="title-column col-md-4 col-sm-12 col-xs-12">
+                        <div class="inner-column">
+                            <h2>Our Clients</h2>
+                            <div class="text">We work closely with our network of Partners to create a smarter, more
+                                connected business community. Our Partners support and enhance their industry expertise
+                                and proven sales and technical knowledge.</div>
+                            <a href="contact.html" class="theme-btn btn-style-one">Join With Us</a>
                         </div>
                     </div>
 
-                    <!--Testimonial Block-->
+                    <!--Partners Column-->
+                    <div class="testimonial-column col-md-8 col-sm-12 col-xs-12">
+                        <div class="testimonial-carousel owl-carousel owl-theme">
 
+                          <!-- Testimonial 1-->
+                           <div class="testimonial-block">
+                                <div class="inner-box">
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/shareMarketLogo.png" alt="Share Market Kranti" />
+                                                </div>
+                                                <div class="text">Share market kranti come forword to provide finiancial
+                                                    literacy to every Indian.</div>
+                                                <a class="read-more" href="https://sharemarketkranti.com/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div> 
+                                    </div> 
+                                    <!--Column-->
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/p_logo4.png" alt="ACC Express" />
+                                                </div>
+                                                <div class="text"> ACC provides products and services with the aim of
+                                                    building trust and improving the lives of consumers, small
+                                                    businesses, enterprises.</div>
+                                                <a class="read-more" href="http://accexpress.in/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
-                    <!--Testimonial Block-->
+                          <!-- Testimonial 2-->
+                            <div class="testimonial-block">
+                                <div class="inner-box">
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/p_logo2.jpg" alt="Shivneri Travels" />
+                                                </div>
+                                                <div class="text">Shivneri Travels provides top car rental service in
+                                                    Pune with professional and experienced drivers.</div>
+                                                <a class="read-more" href="https://shivneritravels.com/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--Column-->
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/p_logo8.jpeg" alt="Espark Tech" />
+                                                </div>
+                                                <div class="text"> We are a passionate Product Architecture from Pune.
+                                                </div>
+                                                <a class="read-more" href="http://esparktech.com/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                      
+                   
+                            <!-- Testimonial 3-->
+                            <div class="testimonial-block">
+                                <div class="inner-box">
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/i2ilogo1.jpg" alt="Espark Tech" />
+                                                </div>
+                                                <div class="text"> We are a passionate Product Architecture from Pune.
+                                                </div>
+                                                <a class="read-more" href="https://www.i2ispecialist.com/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--Column-->
+                                    <div class="column col-md-6 col-sm-6 col-xs-12">
+                                        <div class="partner-block">
+                                            <div class="inner-box">
+                                                <div class="client-img">
+                                                    <img src="images/nvlogo.jpg" alt="SSS7" />
+                                                </div>
+                                                <div class="text"> SS7 sports is a sports technology company with brands
+                                                    such as MyBatting11 in its portfolio.</div>
+                                                <a class="read-more" href="https://ss7sports.com/"><span
+                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
 
+                                </div>
+                            </div>
 
+                        </div>
 
-
-
-
-
-
-
+                    </div>
                 </div>
-
             </div>
-        </div>
-    </section>
-    <!--End Partners Section-->
+        </section>
+
+        <!--End Partners Section-->
 
     <!--Main Footer-->
     <div include-html="footer.html" id="footer"></div>
