--- a/footer.html
+++ b/footer.html
@@ -40,7 +40,7 @@
                                             <li><a href="about.html">Why Choose Us</a></li>
                                             <li><a href="internship.html">Industrial Internship</a></li>
                                             <li><a href="job_opportunity.html">Job Opportunities</a></li>
-                                            <li><a href="contact.html">Job Opportunities</a></li>
+                                            <li><a href="contact.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="widget-column col-md-6 col-sm-6 col-xs-12">
