--- a/header.html
+++ b/header.html
@@ -96,11 +96,11 @@
                                     <li class="dropdown"><a href="#">Services</a>
                                         <ul>
                                             <!-- <li><a href="software_development.html">Software Development</a></li> -->
-                                            <li><a href="full-stack_development.html">Web Development</a></li>
+                                            <li><a href="fullstack_developmentService.html">Web Development</a></li>
                                             <li><a href="digital_marketingService.html">Digital Marketing</a></li>
 
                                             <!-- <li><a href="mobile-application.html">Mobile Application</a></li> -->
-                                            <li><a href="graphics_designing.html">Graphics Designing</a></li>
+                                            <li><a href="graphics_designingService.html">Graphics Designing</a></li>
                                         </ul>
                                     </li>
                                     <!-- <li><a href="projects.html">Our Projects</a></li> -->
@@ -120,7 +120,7 @@
                         <!--Outer Box-->
                         <div class="outer-box">
                             <a href="tel:+918888804265" class="theme-btn btn-style-one">
-                                <span class="icon flaticon-right-arrow-1"></span>Call Now
+                                <span class="icon flaticon-right-arrow-1"></span>Apply Now
                             </a>
                         </div>
 
